Doc: use publication markdown generator

--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,21 +48,21 @@
     "        \"venue-pretext\": \"In the proceedings of \",\n",
     "        \"collection\" : {\"name\":\"publications\",\n",
     "                        \"permalink\":\"/publication/\"}\n",
-    "        \n",
-    "    },\n",
-    "    \"journal\":{\n",
-    "        \"file\": \"pubs.bib\",\n",
-    "        \"venuekey\" : \"journal\",\n",
-    "        \"venue-pretext\" : \"\",\n",
-    "        \"collection\" : {\"name\":\"publications\",\n",
-    "                        \"permalink\":\"/publication/\"}\n",
-    "    } \n",
+    "    }\n",
+    "    # },\n",
+    "    # \"journal\":{\n",
+    "    #     \"file\": \"pubs.bib\",\n",
+    "    #     \"venuekey\" : \"journal\",\n",
+    "    #     \"venue-pretext\" : \"\",\n",
+    "    #     \"collection\" : {\"name\":\"publications\",\n",
+    "    #                     \"permalink\":\"/publication/\"}\n",
+    "    # } \n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,11 +79,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SUCESSFULLY PARSED Sharifian2024: \" {A Topology- and Load-Aware Design for Neighborhood Allgathe ... \"\n",
+      "SUCESSFULLY PARSED Sojoodi2024: \" {Enhancing Intra-Node GPU-to-GPU Performance in MPI + UCX th ... \"\n",
+      "WARNING Missing Expected Field 'booktitle' from entry Witte2022: \" {SciAI4Industry -- Solving PDE ... \"\n",
+      "SUCESSFULLY PARSED Alizadeh2022: \" {Efficient Process Arrival Pattern Aware Collective Communic ... \"\n",
+      "WARNING Missing Expected Field 'booktitle' from entry Temuc2021b: \" {Accelerating Deep Learning us ... \"\n",
+      "SUCESSFULLY PARSED Temucin2021: \" {Efficient Multi-Path NVLink / PCIe-Aware UCX based Collecti ... \"\n",
+      "WARNING Missing Expected Field 'booktitle' from entry Sojoodi2020: \" {Ignite-GPU: a GPU-enabled in- ... \"\n",
+      "SUCESSFULLY PARSED SalimiBeni2020: \" {A GPU-Enabled Extension for Apache Ignite to Facilitate Run ... \"\n"
+     ]
+    }
+   ],
    "source": [
     "for pubsource in publist:\n",
     "    parser = bibtex.Parser()\n",
@@ -215,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
