--- a/files/Publications/2025-AsHES/2025-AsHES.bib
+++ b/files/Publications/2025-AsHES/2025-AsHES.bib
@@ -1,6 +1,7 @@
 @inproceedings{Sojoodi2025,
   author        = {Sojoodi, Amirhossein and Farazdaghi, Ali and Sharifian, Hamed and Grant, Ryan E and Afsahi, Ahmad},
   booktitle     = {Proceedings of the International Workshop on Accelerators and Hybrid Emerging Systems (AsHES)},
+	doi           = {10.1109/IPDPSW66978.2025.00016}
   file          = {:D$\backslash$:/E-book/MendeleyBackup/2025/Proceedings of the International Workshop on Accelerators and Hybrid Emerging Systems (AsHES)/Collaborative Bandwidth-Efficient Intra-Node Allreduce - Sojoodi et al. - 2025.pdf:pdf},
   keywords      = {Collectives,GPU,Heterogeneous},
   mendeley-tags = {Collectives,GPU,Heterogeneous},
